--- a/themes/terminal/assets/css/post.css
+++ b/themes/terminal/assets/css/post.css
@@ -1,3 +1,24 @@
+.index-content {
+  margin-top: 20px;
+}
+
+.framed {
+  border: 1px solid var(--accent);
+  padding: 20px;
+
+  *:first-child {
+    margin-top: 0;
+  }
+
+  *:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.posts {
+  width: 100%;
+}
+
 .post {
   width: 100%;
   text-align: left;
@@ -70,8 +91,8 @@
   ul {
     list-style: none;
 
-    li:before {
-      content: '►';
+    li:not(:empty):before {
+      content: '-';
       position: absolute;
       left: -20px;
       color: var(--accent);
@@ -88,9 +109,24 @@
     justify-content: center;
     margin-bottom: 10px;
 
-    &+ h2 {
+    & + h2 {
       margin-top: -10px;
       margin-bottom: 20px;
     }
   }
+}
+
+.hanchor {
+  color: color-mod(var(--accent) alpha(90%));
+  text-decoration: none;
+  margin-left: 10px;
+  visibility: hidden;
+}
+
+h1:hover a, h2:hover a, h3:hover a, h4:hover a {
+  visibility: visible;
+}
+
+.footnotes {
+  color: color-mod(var(--color) alpha(50%));
 }
